@@ -1,0 +1,7 @@
+#
+# type mapping definitions for stuff new in 2.4.0
+#
+
+GTK_TYPE_ABOUT_DIALOG GtkAboutDialog GtkObject	Gtk2::AboutDialog
+GTK_TYPE_ICON_VIEW GtkIconView GtkObject	Gtk2::IconView
+GTK_TYPE_CELL_VIEW GtkCellView GtkObject	Gtk2::CellView
